Installed + Ran Prettier

--- a/react-frontend/src/index.css
+++ b/react-frontend/src/index.css
@@ -1,15 +1,15 @@
-
 .form-signin {
-    width: 100%;
-    max-width: 330px;
-    padding: 15px;
-    margin: 0 auto;
+  width: 100%;
+  max-width: 330px;
+  padding: 15px;
+  margin: 0 auto;
 }
 
-html, body {
-    height: 100%;
+html,
+body {
+  height: 100%;
 }
 
 body {
-    display: flex;
+  display: flex;
 }
