--- a/react-frontend/src/index.css
+++ b/react-frontend/src/index.css
@@ -13,3 +13,17 @@ body {
 body {
   display: flex;
 }
+
+.center-contents {
+  display: -ms-flexbox;
+  display: -webkit-box;
+  display: flex;
+  -ms-flex-align: center;
+  -ms-flex-pack: center;
+  -webkit-box-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  justify-content: center;
+  padding-top: 40px;
+  padding-bottom: 40px;
+}
