added some UI to the contact list dashboard

--- a/react-frontend/src/index.css
+++ b/react-frontend/src/index.css
@@ -27,3 +27,22 @@ body {
   padding-top: 40px;
   padding-bottom: 40px;
 }
+
+.sidebar {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 100;
+  box-shadow: inset -1px 0 0 rgba(0, 0, 0, 0.1);
+}
+
+.sidebar-sticky {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 48px;
+  height: calc(100vh - 48px);
+  padding-top: 0.5rem;
+  overflow-x: hidden;
+  overflow-y: auto;
+}
