--- a/react-frontend/src/index.css
+++ b/react-frontend/src/index.css
@@ -46,3 +46,11 @@ body {
   overflow-x: hidden;
   overflow-y: auto;
 }
+
+.pointer {
+  cursor: pointer;
+}
+
+.contact-form {
+  max-width: 800px;
+}
