--- a/react-frontend/src/index.css
+++ b/react-frontend/src/index.css
@@ -34,6 +34,7 @@ body {
   bottom: 0;
   left: 0;
   z-index: 100;
+  padding: 0;
   box-shadow: inset -1px 0 0 rgba(0, 0, 0, 0.1);
 }
 
@@ -53,4 +54,9 @@ body {
 
 .contact-form {
   max-width: 800px;
+}
+
+.footer {
+  position: absolute;
+  bottom: 0;
 }
